Fixed navbar position on mobile view

--- a/CSS/navbar.css
+++ b/CSS/navbar.css
@@ -27,7 +27,7 @@ nav>ul>li>a {
         align-items: center;
         justify-content: center;
         backdrop-filter: blur(10px);
-        position: absolute;
+        -webkit-backdrop-filter: blur(10px);
         top: 0;
         left: 0;
         height: 100%;
@@ -35,6 +35,7 @@ nav>ul>li>a {
         z-index: 10;
         position: fixed;
         animation: slideOut 0.5s ease-in-out forwards;
+        padding: 0;
     }
     nav>ul>li {
         list-style: none;
@@ -65,8 +66,8 @@ nav>ul>li>a {
 
     .dismiss{
         position: absolute;
-        top: 0.5rem;
-        right: 1rem;
+        top: 0.3rem;
+        right: 0.3rem;
         font-size: 2rem;
     }
 
